Bug 126321 - Writer Tabbed: Blinking Page Size contents
Summary: Writer Tabbed: Blinking Page Size contents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords:
: 128574 (view as bug list)
Depends on:
Blocks: RenderContext Notebookbar-Tabbed Flickering-UI
  Show dependency treegraph
 
Reported: 2019-07-10 05:02 UTC by Rizal Muttaqin
Modified: 2019-11-04 12:00 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rizal Muttaqin 2019-07-10 05:02:10 UTC
Page size's box and its content always blinking for unknown reason. It happens continuously under my Windows and Ubuntu boxes.

Step to reproduce:

1. Open Writer/Create a new text document
2. Enable tabbed interface (View >  User Interface > Tabbed)
3. Go to Layout tab > Page Size

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 49422a469646ad8be43ba828ca24c2484c26b9e8
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-07-08_02:14:23
Locale: id-ID (id_ID); UI-Language: en-US
Calc: threaded
Comment 1 V Stuart Foote 2019-07-10 13:32:37 UTC
In Notebook bar tabbed view, the Layout tab -> Page Size listbox.

Confirmed on Windows 10 Home 64-bit en-US with
Version: 6.4.0.0.alpha0+ (x64)
Build ID: a9885aed4ee65067613e5506771b6ae6b5e0bae0
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-07-04_01:38:09
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

In Default rendering mode, get a continual droplist refresh that flashes/blinks

In OpenGL rendering mode, the panel is empty. But mouse over responds with empty widgets.
Comment 3 Commit Notification 2019-09-28 09:02:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40c2e33ce47ff1e51f412e20f306b0849517ebcb

tdf#126321: avoid flickering in page size popup

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-10-10 08:48:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/ad02da65c066b1860ebe705980ee86403bdedf00

tdf#126321: avoid flickering in page size popup

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-11-04 12:00:50 UTC
*** Bug 128574 has been marked as a duplicate of this bug. ***