tdf#126321: avoid flickering in page size popup

In a Tabbed notebookbar, Layout - Page Size

Change-Id: I74ab54e96486de960d1ccc7bcb3c2679e25a6e9e